[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Entities/player/Run__001.png" type="Texture" id=2]
[ext_resource path="res://Entities/player/Run__007.png" type="Texture" id=3]
[ext_resource path="res://Entities/player/Jump__009.png" type="Texture" id=4]
[ext_resource path="res://Entities/player/Jump__008.png" type="Texture" id=5]
[ext_resource path="res://Entities/player/Jump__000.png" type="Texture" id=6]
[ext_resource path="res://Entities/player/Jump__003.png" type="Texture" id=7]
[ext_resource path="res://Entities/player/Run__000.png" type="Texture" id=8]
[ext_resource path="res://Entities/player/Dead__007.png" type="Texture" id=9]
[ext_resource path="res://Entities/player/Run__004.png" type="Texture" id=10]
[ext_resource path="res://Entities/player/Jump__002.png" type="Texture" id=11]
[ext_resource path="res://Entities/player/Jump__007.png" type="Texture" id=12]
[ext_resource path="res://Entities/player/Jump__004.png" type="Texture" id=13]
[ext_resource path="res://Entities/player/Dead__001.png" type="Texture" id=14]
[ext_resource path="res://Entities/3/png/BG.png" type="Texture" id=15]
[ext_resource path="res://Entities/player/Idle__000.png" type="Texture" id=16]
[ext_resource path="res://Entities/player/Dead__002.png" type="Texture" id=17]
[ext_resource path="res://Entities/player/Dead__003.png" type="Texture" id=18]
[ext_resource path="res://Entities/sounds/Walk.wav" type="AudioStream" id=19]
[ext_resource path="res://Entities/sounds/Jump.wav" type="AudioStream" id=20]
[ext_resource path="res://Entities/player/Dead__004.png" type="Texture" id=21]
[ext_resource path="res://Entities/player/Dead__008.png" type="Texture" id=22]
[ext_resource path="res://Entities/player/Jump__001.png" type="Texture" id=23]
[ext_resource path="res://Entities/player/Jump__005.png" type="Texture" id=24]
[ext_resource path="res://Entities/player/Jump__006.png" type="Texture" id=25]
[ext_resource path="res://Entities/sounds/Fall.wav" type="AudioStream" id=26]
[ext_resource path="res://Entities/player/Dead__000.png" type="Texture" id=27]
[ext_resource path="res://Entities/player/Dead__005.png" type="Texture" id=28]
[ext_resource path="res://Entities/player/Dead__006.png" type="Texture" id=29]
[ext_resource path="res://Entities/player/Run__002.png" type="Texture" id=30]
[ext_resource path="res://Entities/player/Dead__009.png" type="Texture" id=31]
[ext_resource path="res://Entities/player/Run__008.png" type="Texture" id=32]
[ext_resource path="res://Entities/player/Run__005.png" type="Texture" id=33]
[ext_resource path="res://Entities/player/Run__006.png" type="Texture" id=34]
[ext_resource path="res://Entities/player/Run__009.png" type="Texture" id=35]
[ext_resource path="res://Entities/player/Run__003.png" type="Texture" id=36]
[ext_resource path="res://Scenes/meteor_explosion.tscn" type="PackedScene" id=37]
[ext_resource path="res://Scenes/ball_explosion.tscn" type="PackedScene" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 31 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 2 ), ExtResource( 30 ), ExtResource( 36 ), ExtResource( 10 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 3 ), ExtResource( 32 ), ExtResource( 35 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "Jump",
"speed": 25.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 29.0

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 512, 448 )
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "Idle"
offset = Vector2( 120, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 760
smoothing_enabled = true
smoothing_speed = 15.0

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
bus = "FX"

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
bus = "FX"

[node name="fall_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
bus = "FX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/hit = SubResource( 3 )

[node name="meteor_explosion" parent="." instance=ExtResource( 37 )]

[node name="ball_explosion" parent="." instance=ExtResource( 46 )]

[node name="BallPoint" type="Node2D" parent="."]
position = Vector2( 53.3945, 21.6316 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
margin_left = -31.1814
margin_top = -26.7269
margin_right = 1968.82
margin_bottom = 1116.28
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
